# pelorus

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Makefile  OWNERS  README.md  chart_schema.yaml  config.yaml  ct.yaml  current-to-next.diff  dashboard-sdm.yml  devfile.yaml  doc_update.exporters.diff  extra_prometheus_hosts.yml  extra_prometheus_secrets.yml  grafana-deployment.yml  mdt-secret-discovery-requirements.yml  mkdocs.yml  pelorus.code-workspace  provision.sh  pylama.ini  pylava.ini  pyproject.toml  readthedocs.yaml  requirements.yml  runhelm.sh  runminimal.sh  sdm-volume-patch.yml  secret.yaml  setup.py  test.yaml  thanos-config.yaml
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
_test/: TESTING.md  bats-support-clone.sh  bump_version.py  conftest.sh  pre-commit  test_prometheusrules  test_prometheusrules.sh
admin-grafana-dashboards/: README.md  example-playbook.yml
architecture_docs/: ADRs.md  README.md
charts/: README.md  operators
container/: Containerfile
demo/: README.md  demo-tekton  demo-tekton.sh  demo.sh  oc_generate_apps2.sh
docs/: AboutPelorus.md  Architecture.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Configuration.md  Dashboard_SDP.md  Dashboards.md  Demo.md  DemoTroubleshoot.md  Development.md  DevelopmentChoices.md  GettingStarted.md  Install.md  MinIO.md  Noobaa.md  Philosophy.md  Storage.md  Troubleshooting.md  Uninstall.md  UpstreamSupport.md  UserGuide.md  configuration2.md  index.md  name.md  requirements.txt
examples/: ocp-fed.yaml
exporters/: .dockerignore  Containerfile  README.md  pelorus.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_exporters.py  test_pelorus.py
exporters-yaml/: exporter.yaml.j2  namespace.yaml.j2  rolebinding.yaml  rolebinding.yaml.j2  sa-patch.yaml  sa.yaml
exporters/deploytime/: Dockerfile  README.md  __init__.py  app.py  collector_github.py  collector_openshift.py  pelorus.py  requirements.txt  setup.cfg  values.yaml
federated-prometheus/: grafana-mdt-datasources.yml.j2  grafana-pelorus-datasources.yml.j2  prometheus-cr.yml  prometheus-htpasswd-secret.yml.j2  prometheus-oauth-cluster-role-binding.yml.j2  prometheus-oauth-cluster-role.yml  prometheus-operator-config.yml.j2  prometheus-route.yml  prometheus-sa.yml  prometheus-scrape-config-secret.yml.j2  prometheus-svc.yml
meta/: main.yml
metrics-exporters/: README.md
mocks/: README.md  bitbucket_cloud.json  commitexporter_github.json
overrides/: home.html  test.html
pelorus-operator/: .dockerignore  Dockerfile  Makefile  Makefile.orig  PROJECT  bundle.Dockerfile  watches.yaml
playbooks/: gitea.yml  post.yml  (+2 more)
(+675 files in other folders)
