[metadata]
name = pelorus deploytime exporter
version = file: VERSION
description = Metrics Exporters for Pelorus project
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/konveyor/pelorus
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = deploytime

[entry_points]
console_scripts =
    committime = app:main

[egg_info]
egg_base = .

[bdist_wheel]
universal = 1

[pbr]
warnerrors = true
